--- a/styles/Marquee.module.css
+++ b/styles/Marquee.module.css
@@ -1,10 +1,23 @@
 .anim {
-    position: absolute;
-    will-change: transform;
-    animation: marquee 15s linear infinite ;
+  position: absolute;
+  will-change: transform;
+  animation: marquee 15s linear infinite;
 }
 
 .anim:hover {
-    animation-play-state: paused;
-    
+  animation-play-state: paused;
+}
+
+.scrollWrapper {
+  display: flex;
+  animation: scroll-right-to-left 20s linear infinite;
+}
+
+@keyframes scroll-right-to-left {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
